<resources>
    <string name="app_name">Checkup</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_general_menu">Menu</string>
    <string name="dummy_text">Dummy Text</string>
    <string name="icon">Icon</string>
    <string name="CONTACT">contact</string>
    <string name="PASSWORD">password</string>
    <string name="STATE">state</string>
    <string name="CHOICE">choice</string>

    <string name="option_menu_lable">Checkup</string>
    <string-array name="options">
        <item>Doctors</item>
        <item>Diagnostics</item>
        <item>Map</item>
        <item>Sign In</item>
        <item>Sign Up</item>
    </string-array>
    <string-array name="doctoroptions">
        <item>Doctors</item>
        <item>Diagnostics</item>
        <item>Map</item>
        <item>Patient List</item>
        <item>Update Profile</item>
        <item>Signout</item>
    </string-array>
    <string name="title_activity_signup_options">Signup Options</string>
    <string name="title_activity_doctor_signup">Signup</string>
    <string name="name">Name</string>
    <string name="mobile_number">Contact (i.e., Email, Mobile etc.)</string>
    <string name="chamber">Chamber</string>
    <string name="qualifications">Qualifications</string>
    <string name="department">Department</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="enter_available_period">Enter below your Available Period</string>
    <string name="choose_available_days">Choose below your Available Days</string>
    <string name="visiting_fee">Visiting Fee</string>
    <string name="colon_symbol">:</string>
    <string name="to">to</string>
    <string name="title_activity_doctors">Doctors</string>
    <string name="password">Password</string>
    <string name="walking_is_man_s_best_medicine">\"Walking is man\'s best medicine\"</string>
    <string name="title_activity_doctor_details">Details</string>
    <string name="checkup_hour">Checkup Hour</string>
    <string name="available_days">Available Days</string>
    <string name="contact">Contact</string>
    <string name="take_an_appointment">Take an appointment</string>
    <string name="title_activity_appointment">Appointment</string>
    <string name="age">Age</string>
    <string name="select_your_gender">Select your gender:</string>

    <string-array name="sex_array">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>
    <string name="title_activity_doctor_signin">Sign-In</string>
    <string name="i_haven_t_signup"><u>I don\'t have an account</u></string>
    <string name="title_activity_doctor_menu">Menu</string>
    <string name="logout_message">Do you want to Sign-out ?</string>
    <string name="logout_title">Signout</string>
    <string name="ok">Yes</string>
    <string name="cancel">No</string>
    <string name="title_activity_patient_list">Patient List</string>
    <string name="postpone_all_apointments">Postpone All Apointments</string>
    <string name="oath">\"Primum non nocere\"</string>
    <string name="ID">id</string>
    <string name="FCM_PREF">com.csecu.amrit.checkup.fcm_pref</string>
    <string name="FCM_TOKEN">fcm_token</string>
    <string name="TempData">tempData</string>
    <string name="tempid">id</string>
    <string name="tempname">name</string>
    <string name="tempcontact">contact</string>
    <string name="tempdepartment">department</string>
    <string name="tempqualifications">qualifications</string>
    <string name="tempchamber">chamber</string>
    <string name="tempdates">dates</string>
    <string name="startTime">startTime</string>
    <string name="tempendTime">endTime</string>
    <string name="tempfee">fee</string>
    <string name="title_activity_message">Message</string>
    <string name="NAME">name</string>
    <string name="message">Message</string>

</resources>
