<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.csecu.amrit.checkup.DoctorSignupActivity"
    tools:showIn="@layout/activity_doctor_signup">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/etname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/etpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/etmobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/etchamber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/chamber" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/etdepartment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/department" />
            </android.support.design.widget.TextInputLayout>

            <EditText
                android:id="@+id/etqualification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/qualifications"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/choose_available_days"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ToggleButton
                    android:id="@+id/tbsunday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sunday"
                    android:textOff="@string/sunday"
                    android:textOn="@string/sunday"
                    android:textSize="10sp" />

                <ToggleButton
                    android:id="@+id/tbmonday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/monday"
                    android:textOff="@string/monday"
                    android:textOn="@string/monday"
                    android:textSize="10sp" />

                <ToggleButton
                    android:id="@+id/tbtuesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tuesday"
                    android:textOff="@string/tuesday"
                    android:textOn="@string/tuesday"
                    android:textSize="10sp" />

                <ToggleButton
                    android:id="@+id/tbwednesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/wednesday"
                    android:textOff="@string/wednesday"
                    android:textOn="@string/wednesday"
                    android:textSize="10sp" />

                <ToggleButton
                    android:id="@+id/tbthursday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/thursday"
                    android:textOff="@string/thursday"
                    android:textOn="@string/thursday"
                    android:textSize="10sp" />

                <ToggleButton
                    android:id="@+id/tbfriday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/friday"
                    android:textOff="@string/friday"
                    android:textOn="@string/friday"
                    android:textSize="10sp" />

                <ToggleButton
                    android:id="@+id/tbsaturday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/saturday"
                    android:textOff="@string/saturday"
                    android:textOn="@string/saturday"
                    android:textSize="10sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/enter_available_period"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinnerhours1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/colon_symbol" />

                <Spinner
                    android:id="@+id/spinnerminute1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5" />

                <Spinner
                    android:id="@+id/spinnerperiod1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/to"
                android:textSize="16sp"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinnerhours2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/colon_symbol" />

                <Spinner
                    android:id="@+id/spinnerminute2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5" />

                <Spinner
                    android:id="@+id/spinnerperiod2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/etfee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/visiting_fee"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
